@@ -109,7 +109,7 @@ Be more verbose in debug mode.  This shows configfile parsing logic.
 .El
 .Pp
 .Nm 
-is an authoritative and forwarding DNS server.  It can run as master or 
+is an authoritative and forwarding DNS server.  It can run as primary or 
 replicant.
 When new configfiles are written it must be restarted.  For replicants that
 receive notifies or timeout on the refresh or retry SOA values the daemon is
